Fix target Windows 10 Version 2004 & add TrafficMonitor to project reference

--- a/TrafficApp/TrafficApp.csproj
+++ b/TrafficApp/TrafficApp.csproj
@@ -11,8 +11,8 @@
     <AssemblyName>TrafficApp</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion>10.0.19569.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.15063.0</TargetPlatformMinVersion>
+    <TargetPlatformVersion>10.0.19041.0</TargetPlatformVersion>
+    <TargetPlatformMinVersion>10.0.19041.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <EnableDotNetNativeCompatibleProfile>true</EnableDotNetNativeCompatibleProfile>
     <FileAlignment>512</FileAlignment>
@@ -151,6 +151,10 @@
       <Project>{089d479e-9e0d-4296-9e04-12eca7549461}</Project>
       <Name>LocationHelper</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TrafficMonitor\TrafficMonitor.csproj">
+      <Project>{61e4db46-9145-4587-bcaf-ae3df9c62f7e}</Project>
+      <Name>TrafficMonitor</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
@@ -161,7 +165,7 @@
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
